--- a/preprocessing_benchmarking_cortex.ipynb
+++ b/preprocessing_benchmarking_cortex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -25,9 +25,9 @@
     "from sklearn.manifold import TSNE\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.decomposition import FactorAnalysis\n",
-    "from ZIFA import ZIFA\n",
-    "from ZINB import ZINB\n",
-    "from SIMLR import SIMLR\n",
+    "from R_interop import ZIFA\n",
+    "from R_interop import ZINB\n",
+    "from R_interop import SIMLR\n",
     "from benchmarking import *\n",
     "from helper import *\n",
     "% matplotlib inline"
@@ -35,13 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/Zeisel/\""
+    "data_path = \"/home/ubuntu/single-cell-scVI/data/Zeisel/\""
    ]
   },
   {
@@ -53,21 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "X = pd.read_csv(data_path + \"expression_mRNA_17-Aug-2014.txt\", sep=\"\\t\", low_memory=False).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = pd.read_csv(data_path + \"expression_mRNA_17-Aug-2014.txt\", sep=\"\\t\", low_memory=False).T\n",
@@ -83,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# keep the most variable genes according to the biscuit paper\n",
@@ -138,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#train test split for log-likelihood scores\n",
@@ -154,6 +135,7 @@
    "execution_count": 125,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -172,6 +154,7 @@
    "execution_count": 126,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -188,6 +171,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "deletable": false,
+    "editable": false,
+    "run_control": {
+     "frozen": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "X_zero, i, j, ix = dropout(X_train)\n",
+    "np.save(data_path + \"imputation/X_zero.npy\", X_zero)\n",
+    "np.save(data_path + \"imputation/i.npy\", i)\n",
+    "np.save(data_path + \"imputation/j.npy\", j)\n",
+    "np.save(data_path + \"imputation/ix.npy\", ix)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -198,10 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_train = np.loadtxt(data_path + \"data_train\")\n",
@@ -209,15 +209,19 @@
     "c_train = np.loadtxt(data_path + \"label_train\")\n",
     "c_test = np.loadtxt(data_path + \"label_test\")\n",
     "cp_train = np.loadtxt(data_path + \"precise_label_train\")\n",
-    "cp_test = np.loadtxt(data_path + \"precise_label_test\")"
+    "cp_test = np.loadtxt(data_path + \"precise_label_test\")\n",
+    "\n",
+    "X_zero, i, j, ix = \\\n",
+    "        np.load(data_path + \"imputation/X_zero.npy\"),\\\n",
+    "        np.load(data_path + \"imputation/i.npy\"), \\\n",
+    "        np.load(data_path + \"imputation/j.npy\"), \\\n",
+    "        np.load(data_path + \"imputation/ix.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def agg_clusters_2(c):\n",
@@ -256,47 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_zero, i, j, ix = \\\n",
-    "        np.load(data_path + \"imputation/X_zero.npy\"),\\\n",
-    "        np.load(data_path + \"imputation/i.npy\"), \\\n",
-    "        np.load(data_path + \"imputation/j.npy\"), \\\n",
-    "        np.load(data_path + \"imputation/ix.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "n_latent = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "n_latent = 10\n",
+    "\n",
     "algorithms = [FactorAnalysis(n_components=n_latent), \\\n",
-    "              ZIFA(n_components=n_latent)]\n",
+    "              ZIFA.ZIFA(n_components=n_latent)]\n",
     "alg_names = [\"FA\", \"ZIFA\"]\n",
     "alg_logs = [True, True]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -304,20 +282,20 @@
      "output_type": "stream",
      "text": [
       "0 FA\n",
-      "CPU times: user 696 ms, sys: 1.51 s, total: 2.21 s\n",
-      "Wall time: 330 ms\n",
-      "[0.11581131621741773, 0.27312842428258505, 0.29890142393022651]\n",
-      "[0.13797953173246824, 0.35827752246474137, 0.31243455865964415]\n",
-      "[0.16330256646100386, 0.5281002482621574, 0.43436435453448607]\n",
-      "[0.21151757370266544, 0.78013724807955642, 0.78688963604064266]\n",
+      "CPU times: user 560 ms, sys: 200 ms, total: 760 ms\n",
+      "Wall time: 218 ms\n",
+      "[0.11581131621741758, 0.27242090518994611, 0.29792838642308994]\n",
+      "[0.1379795317324681, 0.35827752246474137, 0.31243455865964415]\n",
+      "[0.16330256646100366, 0.52810024826215751, 0.43436435453448607]\n",
+      "[0.21151757370266561, 0.78013724807955698, 0.78688963604064266]\n",
       "-1304.09774005\n",
       "1 ZIFA\n",
-      "CPU times: user 7min 5s, sys: 12min 53s, total: 19min 58s\n",
-      "Wall time: 2min 53s\n",
-      "[0.10760864940650154, 0.27739547166803474, 0.3047726295034825]\n",
-      "[0.13207018700791912, 0.33238196759272998, 0.23560128683050038]\n",
-      "[0.15602621812120895, 0.4890464265132512, 0.39260959628267939]\n",
-      "[0.20493195811497675, 0.7621022202234099, 0.76261580271279172]\n",
+      "CPU times: user 4min 59s, sys: 6min 5s, total: 11min 4s\n",
+      "Wall time: 2min 55s\n",
+      "[0.10760864940654481, 0.27739547166803474, 0.3047726295034825]\n",
+      "[0.13207018700785564, 0.33238196759272998, 0.23560128683050038]\n",
+      "[0.15602621812059733, 0.4890464265132512, 0.39260959628267939]\n",
+      "[0.20493195811465581, 0.7621022202234099, 0.76261580271279172]\n",
       "-1366.15016113\n"
      ]
     }
@@ -350,27 +328,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 4s, sys: 3.82 s, total: 1min 8s\n",
-      "Wall time: 5min 50s\n",
-      "CPU times: user 7.02 s, sys: 2.46 s, total: 9.48 s\n",
-      "Wall time: 44.9 s\n",
-      "-1228.07455885\n",
-      "[0.26307611328993241, 0.86133243308042906, 0.91825852643537653]\n",
-      "[0.26120556769903069, 0.72846126262601396, 0.81089804731570525]\n",
-      "[0.28948372843281256, 0.7307396743553678, 0.71783886252317064]\n",
-      "[0.26175088291560739, 0.77674732406327229, 0.72310898818408831]\n"
+      "CPU times: user 1min 19s, sys: 12.3 s, total: 1min 32s\n",
+      "Wall time: 20min 40s\n",
+      "CPU times: user 9.77 s, sys: 9.15 s, total: 18.9 s\n",
+      "Wall time: 1min 34s\n",
+      "-1228.39587006\n",
+      "[0.26205785925921099, 0.85077172427089109, 0.91146263609638756]\n",
+      "[0.25990368754080045, 0.73732465648146661, 0.81737057824171977]\n",
+      "[0.28822051246643876, 0.7337572513361047, 0.720925920911064]\n",
+      "[0.26269815861277129, 0.77659655102041325, 0.72452418659778117]\n"
      ]
     }
    ],
    "source": [
-    "zinb = ZINB(n_components=n_latent, learn_V=True)\n",
+    "zinb = ZINB.ZINB(n_components=n_latent, learn_V=True)\n",
     "% time zinb.fit(X_train)\n",
     "% time latent = zinb.transform(X_train)\n",
     "print zinb.score(X_test)\n",
@@ -382,22 +360,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.35581114086547649, 0.39763026135241941, 0.33581111107441836]\n",
-      "[0.47594514783811925, 0.42182382206636898, 0.30828147637529074]\n",
-      "[0.59177936314164903, 0.667961741036047, 0.53600416126351158]\n",
-      "[0.57610561187014786, 0.75222293463073531, 0.67924145540151004]\n"
+      "[0.33623076916872874, 0.39690445715129641, 0.33477923368872547]\n",
+      "[0.45722509703124592, 0.46988632720532864, 0.30683783750900162]\n",
+      "[0.55906767359063525, 0.54550601726208114, 0.37178962672170879]\n",
+      "[0.66499848522626814, 0.82614258126789553, 0.80315514316396508]\n"
      ]
     }
    ],
    "source": [
-    "simlr = SIMLR(n_clusters=7)\n",
+    "simlr = SIMLR.SIMLR(n_clusters=7)\n",
     "%time simlr.fit_transform(X_train)\n",
     "clear_output()\n",
     "print cluster_scores(simlr.F, 2, agg_clusters_2(c_train))\n",
@@ -490,25 +468,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "X_zero, i, j, ix = dropout(X_train, zifa.params[\"decay_coef\"], uniform=True)\n",
-    "np.save(data_path + \"imputation/X_zero.npy\", X_zero)\n",
-    "np.save(data_path + \"imputation/i.npy\", i)\n",
-    "np.save(data_path + \"imputation/j.npy\", j)\n",
-    "np.save(data_path + \"imputation/ix.npy\", ix)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -520,6 +479,7 @@
    "execution_count": 11,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -676,6 +636,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
