--- a/preprocessing_benchmarking_klein.ipynb
+++ b/preprocessing_benchmarking_klein.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -12,7 +21,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from model import scVI_final as scVI\n",
+    "import scVI\n",
     "import tensorflow as tf\n",
     "\n",
     "from helper import *\n",
@@ -22,13 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/Klein/\""
+    "data_path = \"/home/ubuntu/single-cell-scVI/data/Klein/\""
    ]
   },
   {
@@ -40,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,10 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Y = pd.read_csv(data_path + \"bBM.spring_and_pba.csv\")\n",
@@ -85,6 +90,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,6 +134,7 @@
    "execution_count": 15,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -144,10 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_zero, i, j, ix = \\\n",
