--- a/10xPBMCs-DE.ipynb
+++ b/10xPBMCs-DE.ipynb
@@ -9,15 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from model import scVI_final as scVI\n",
+    "import scVI\n",
     "from sklearn.linear_model import LinearRegression\n",
     "import tensorflow as tf\n",
     "import pickle\n",
@@ -26,7 +33,7 @@
     "import scipy.stats as stats\n",
     "from helper import *\n",
     "import time\n",
-    "from IDR import IDR\n",
+    "from R_interop import IDR\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -629,6 +636,7 @@
    "cell_type": "code",
    "execution_count": 329,
    "metadata": {
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -665,6 +673,7 @@
    "execution_count": 339,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -683,6 +692,7 @@
    "cell_type": "code",
    "execution_count": 340,
    "metadata": {
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -3016,6 +3026,7 @@
    "execution_count": 102,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -3032,6 +3043,7 @@
    "execution_count": 321,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
