--- a/10xPBMCs.ipynb
+++ b/10xPBMCs.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,7 +30,7 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "\n",
-    "from model import scVI_final as scVI\n",
+    "import scVI\n",
     "from benchmarking import *\n",
     "from helper import *"
    ]
@@ -35,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_batch_scVI = True\n",
+    "run_batch_scVI = False\n",
     "learning_rate = 0.0004\n",
     "epsilon = 0.01"
    ]
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -97,10 +106,9 @@
      "output_type": "stream",
      "text": [
       "Running scVI on 3346 genes\n",
-      "Got 2batches in the data\n",
-      "Will apply a MMD penalty\n",
-      "Will work on mode list for incorporating library size\n",
-      "Will work on mode gene-batch for modeling inverse dispersion param\n",
+      "scVI will run without batch correction\n",
+      "Will work on mode numeric for incorporating library size\n",
+      "Will work on mode gene for modeling inverse dispersion param\n",
       "Will apply zero inflation\n",
       "1 hidden layers at 128 each for a final 10 latent space\n"
      ]
@@ -135,8 +143,8 @@
     "    \n",
     "else:\n",
     "    model = scVI.scVIModel(expression=expression, kl_scale=kl_scalar, batch_ind=batch, mmd_scale=mmd_scalar, \\\n",
-    "                       num_batches=2, apply_mmd=True, optimize_algo=optimizer, phase=training_phase, \\\n",
-    "                           dispersion=\"gene-batch\", library_size_mean=library_mean, library_size_var=library_var)\n",
+    "                       num_batches=2, apply_mmd=False, optimize_algo=optimizer, phase=training_phase, \\\n",
+    "                           dispersion=\"gene\", library_size_mean=library_mean, library_size_var=library_var)\n",
     "    \n",
     "# Session creation\n",
     "sess = tf.Session()"
@@ -328,34 +336,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(9029, 3346)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.090907849371433258"
+       "0.91893298551440239"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sess.run(tf.global_variables_initializer())\n",
-    "res = train_model(model, (expression_train, expression_test), sess, 120, batch=(b_train, b_test))\n",
-    "eval_imputed_data(model, (X_zero, i, j, ix), expression_train, sess, batch=b_train)"
+    "res = train_model(model, (X_zero, expression_test), sess, 300)\n",
+    "eval_imputed_data(model, (X_zero, i, j, ix), expression_train, sess)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
