--- a/batch_bipolar-mmd.ipynb
+++ b/batch_bipolar-mmd.ipynb
@@ -270,7 +270,7 @@
    ],
    "source": [
     "sess.run(tf.global_variables_initializer())\n",
-    "res = train_model(model, (expression_train, expression_test), sess, 120, batch=(b_train, b_test))\n",
+    "res = train_model(model, (X_zero, expression_test), sess, 120, batch=(b_train, b_test))\n",
     "eval_imputed_data(model, (X_zero, i, j, ix), expression_train, sess, batch=b_train)"
    ]
   }
