--- a/preprocessing_benchmarking_10x1M.ipynb
+++ b/preprocessing_benchmarking_10x1M.ipynb
@@ -530,11 +530,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
