--- a/preprocessing_benchmarking_10xPBMCs.ipynb
+++ b/preprocessing_benchmarking_10xPBMCs.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,9 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true,
     "deletable": false,
     "editable": false,
     "run_control": {
@@ -524,7 +523,7 @@
    },
    "outputs": [],
    "source": [
-    "X_zero, i, j, ix = dropout(X_train)\n",
+    "X_zero, i, j, ix = dropout(X_train, rate=0.2, slice_prop=0.5)\n",
     "np.save(data_path + \"imputation/X_zero.npy\", X_zero)\n",
     "np.save(data_path + \"imputation/i.npy\", i)\n",
     "np.save(data_path + \"imputation/j.npy\", j)\n",
@@ -533,10 +532,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.94147343649343485, 0.90999046904518399, 0.86342350943698254)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(X_zero == X_train), np.mean(X_zero == 0), np.mean(X_train == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_zero, i, j, ix = \\\n",
@@ -593,14 +610,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('MAGIC', 0.60782387893793932)\n"
+      "('MAGIC', 0.53948369692054254)\n"
      ]
     }
    ],
