--- a/preprocessing_benchmarking_klein.ipynb
+++ b/preprocessing_benchmarking_klein.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,22 +122,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true,
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_zero, i, j, ix = dropout(expression_data, 1., uniform=True)\n",
+    "X_zero, i, j, ix = dropout(expression_data, rate=0.2, slice_prop=0.5)\n",
     "np.save(data_path + \"imputation/X_zero.npy\", X_zero)\n",
     "np.save(data_path + \"imputation/i.npy\", i)\n",
     "np.save(data_path + \"imputation/j.npy\", j)\n",
     "np.save(data_path + \"imputation/ix.npy\", ix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.94218616947648104, 0.91389457715979394, 0.86370773496523567)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(X_zero == expression_data), np.mean(X_zero == 0), np.mean(expression_data == 0)"
    ]
   },
   {
@@ -162,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('MAGIC', 0.58781481229829469)\n"
+     ]
+    }
+   ],
    "source": [
     "mean_MAGIC = np.load(data_path + \"imputation/X_zero_MAGIC.npy\")\n",
     "print(\"MAGIC\", imputation_error(mean_MAGIC, expression_data, X_zero, i, j, ix))"
@@ -172,10 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "log_library_size = np.log(np.sum(expression_data, axis=1))\n",
@@ -185,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +207,7 @@
       "Will work on mode numeric for incorporating library size\n",
       "Will work on mode gene for modeling inverse dispersion param\n",
       "Will apply zero inflation\n",
-      "1 hidden layers at 128 each for a final 10 latent space\n"
+      "1 hidden layers at 128 each for a final 20 latent space\n"
      ]
     }
    ],
@@ -213,7 +223,7 @@
     "\n",
     "model = scVI.scVIModel(expression=expression, kl_scale=kl_scalar, \\\n",
     "                         optimize_algo=optimizer, phase=training_phase, \\\n",
-    "                          library_size_mean=mean, library_size_var=var)\n",
+    "                          library_size_mean=mean, library_size_var=var, n_latent=20)\n",
     "\n",
     "# Session creation\n",
     "sess = tf.Session()"
@@ -848,16 +858,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.79123792797327042"
+       "0.82543376088142395"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
