added files additional

--- a/PBMC-prepro.ipynb
+++ b/PBMC-prepro.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# gene filtering once and for all from original matrix"
+    "# STEP 1: gene filtering once and for all from original matrix, this was done to produce the file that will be loaded in step 2. Do not execute, we provide the files needed to run the rest of the code"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## now clusters and qc"
+    "## STEP2: now clusters and qc"
    ]
   },
   {
