--- a/RETINA-prepro.ipynb
+++ b/RETINA-prepro.ipynb
@@ -132,6 +132,7 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
@@ -843,6 +844,7 @@
    "execution_count": 31,
    "metadata": {
     "collapsed": true,
+    "deletable": false,
     "editable": false,
     "run_control": {
      "frozen": true
