--- a/BRAIN-LARGE-prepro.ipynb
+++ b/BRAIN-LARGE-prepro.ipynb
@@ -37,10 +37,12 @@
    "source": [
     "data has already:\n",
     "- randomly shuffled\n",
-    "- filtered 880 top variance genes\n",
+    "- filtered 720 top variance genes\n",
     "- subsampled to \n",
     "    - 1M train\n",
-    "    - 10k test"
+    "    - 10k test\n",
+    "    \n",
+    "See the code in additional/BRAIN-LARGE.ipynb"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create something for BISCUIT and MAGIC"
+    "#### Create something for BISCUIT to test scalability"
    ]
   },
   {
@@ -118,8 +120,7 @@
    "outputs": [],
    "source": [
     "n_latent = 10\n",
-    "#n_cells_list = [4000, 10000, 15000, 30000, 50000, 100000]\n",
-    "n_cells_list = [10000]"
+    "n_cells_list = [4000, 10000, 15000, 30000, 50000, 100000]"
    ]
   },
   {
