--- a/CORTEX-prepro.ipynb
+++ b/CORTEX-prepro.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,6 +96,58 @@
    "source": [
     "for i in np.unique(labels):\n",
     "    print i, clusters[np.where(labels == i)[0][0]], \"\\t\" , len( np.where(labels == i)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def agg_clusters_2(c):\n",
+    "    new_c = np.zeros_like(c)\n",
+    "    for t in np.arange(c.shape[0]):\n",
+    "        if c[t] in [2, 6, 5]:\n",
+    "            new_c[t] = 1\n",
+    "        else:\n",
+    "            new_c[t] = 0\n",
+    "    return new_c\n",
+    "\n",
+    "def agg_clusters_3(c):\n",
+    "    new_c = np.zeros_like(c)\n",
+    "    for t in np.arange(c.shape[0]):\n",
+    "        if c[t] in [2, 6, 5]:\n",
+    "            new_c[t] = 2\n",
+    "        elif c[t] in [1, 3]: \n",
+    "            new_c[t] = 1\n",
+    "        else:\n",
+    "            new_c[t] = 0\n",
+    "    return new_c\n",
+    "\n",
+    "def agg_clusters_4(c):\n",
+    "    new_c = np.zeros_like(c)\n",
+    "    for t in np.arange(c.shape[0]):\n",
+    "        if c[t] in [2, 6, 5]:\n",
+    "            new_c[t] = 3\n",
+    "        elif c[t] in [1, 3]: \n",
+    "            new_c[t] = 2\n",
+    "        elif c[t] in [0]:\n",
+    "            new_c[t] = 1\n",
+    "        else:\n",
+    "            new_c[t] = 0\n",
+    "    return new_c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save(\"labels\", labels)\n",
+    "np.save(\"labels_2\", agg_clusters_2(labels))\n",
+    "np.save(\"labels_3\", agg_clusters_3(labels))\n",
+    "np.save(\"labels_4\", agg_clusters_4(labels))"
    ]
   },
   {
@@ -216,46 +259,6 @@
     "        np.load(data_path + \"imputation/i.npy\"), \\\n",
     "        np.load(data_path + \"imputation/j.npy\"), \\\n",
     "        np.load(data_path + \"imputation/ix.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def agg_clusters_2(c):\n",
-    "    new_c = np.zeros_like(c)\n",
-    "    for t in np.arange(c.shape[0]):\n",
-    "        if c[t] in [2, 6, 5]:\n",
-    "            new_c[t] = 0\n",
-    "        else:\n",
-    "            new_c[t] = 1\n",
-    "    return new_c\n",
-    "\n",
-    "def agg_clusters_3(c):\n",
-    "    new_c = np.zeros_like(c)\n",
-    "    for t in np.arange(c.shape[0]):\n",
-    "        if c[t] in [2, 6, 5]:\n",
-    "            new_c[t] = 0\n",
-    "        elif c[t] in [1, 3]: \n",
-    "            new_c[t] = 1\n",
-    "        else:\n",
-    "            new_c[t] = 2\n",
-    "    return new_c\n",
-    "\n",
-    "def agg_clusters_4(c):\n",
-    "    new_c = np.zeros_like(c)\n",
-    "    for t in np.arange(c.shape[0]):\n",
-    "        if c[t] in [2, 6, 5]:\n",
-    "            new_c[t] = 0\n",
-    "        elif c[t] in [1, 3]: \n",
-    "            new_c[t] = 1\n",
-    "        elif c[t] in [0]:\n",
-    "            new_c[t] = 2\n",
-    "        else:\n",
-    "            new_c[t] = 3\n",
-    "    return new_c"
    ]
   },
   {
