--- a/PBMC-scVI.ipynb
+++ b/PBMC-scVI.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -44,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,12 +143,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "sess.run(tf.global_variables_initializer())\n",
     "result = train_model(model, (expression_train, expression_test), sess, 120, batch=(b_train, b_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.38777304, 0.79069378213836394, 0.69595041584939288]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latent = eval_latent(model, expression_train, sess, batch=b_train)\n",
+    "cluster_scores(latent, len(np.unique(c_train)), c_train)"
    ]
   },
   {
@@ -278,27 +290,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.38777304, 0.79069378213836394, 0.69595041584939288]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "latent = eval_latent(model, expression_train, sess, batch=b_train)\n",
-    "cluster_scores(latent, len(np.unique(c_train)), c_train)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -356,6 +347,77 @@
     "sess.run(tf.global_variables_initializer())\n",
     "res = train_model(model, (X_zero, expression_test), sess, 300)\n",
     "eval_imputed_data(model, (X_zero, i, j, ix), expression_train, sess)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# scVI NO LIBRARY SIZE BENCHMARK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running scVI on 3346 genes\n",
+      "scVI will run without batch correction\n",
+      "Will work on mode gene for modeling inverse dispersion param\n",
+      "Will apply zero inflation\n",
+      "1 hidden layers at 128 each for a final 10 latent space\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "expression = tf.placeholder(tf.float32, (None, expression_train.shape[1]), name='x')\n",
+    "kl_scalar = tf.placeholder(tf.float32, (), name='kl_scalar')\n",
+    "batch = tf.placeholder(tf.int32, [None], name=\"batch_ind\")\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate, epsilon=epsilon)\n",
+    "training_phase = tf.placeholder(tf.bool, (), name='training_phase')\n",
+    "mmd_scalar = tf.placeholder(tf.float32, [], name='l')\n",
+    "\n",
+    "model = scVI.scVINoLibSizeModel(expression=expression, kl_scale=kl_scalar, \\\n",
+    "                          optimize_algo=optimizer, phase=training_phase)\n",
+    "    \n",
+    "# Session creation\n",
+    "sess = tf.Session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess.run(tf.global_variables_initializer())\n",
+    "result = train_model(model, (expression_train, expression_test), sess, 120)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.22399606, 0.76470668469510272, 0.67277638118387129]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latent = eval_latent(model, expression_train, sess)\n",
+    "cluster_scores(latent, len(np.unique(c_train)), c_train)"
    ]
   },
   {
