--- a/BRAIN-LARGE-prepro.ipynb
+++ b/BRAIN-LARGE-prepro.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -22,13 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"data/10x1M/\""
+    "data_path = \"/home/ubuntu/single-cell-scVI/data/10x1M/\""
    ]
   },
   {
@@ -54,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = h5py.File(data_path + \"data.hdf5\", \"r\")\n",
+    "f = h5py.File(data_path + \"data_small.hdf5\", \"r\")\n",
     "X_train = f[\"data_train\"] \n",
     "X_test = f[\"data_test\"]\n",
     "f_log = h5py.File(data_path + \"data_log.hdf5\", \"r\")\n",
@@ -529,13 +525,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "X_zero, i, j, ix = dropout(X_train[:10000], zifa.params[\"decay_coef\"], uniform=True)\n",
+    "X_zero, i, j, ix = dropout(X_train[:10000])\n",
     "np.save(data_path + \"imputation/X_zero.npy\", X_zero)\n",
     "np.save(data_path + \"imputation/i.npy\", i)\n",
     "np.save(data_path + \"imputation/j.npy\", j)\n",
